2007-12-21  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/playback/gststreamselector.c: (gst_selector_pad_event):
	  Don't leak event.

2007-12-20  Thijs Vermeir <thijsvermeir@gmail.com>

	* gst-libs/gst/riff/riff-read.c:
	Use GST_ROUND_UP_2 macro

2007-12-20  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/playback/.cvsignore:
	  Ignore more.

2007-12-20  Tim-Philipp Müller  <tim at centricular dot net>

	* ext/pango/gsttextoverlay.c: (gst_text_overlay_class_init):
	* gst/playback/gstplaybasebin.c: (set_subtitles_visible),
	  (set_active_source):
	* gst/playback/gstplaybasebin.h:
	* gst/playback/gstplaybin.c: (gst_play_bin_class_init),
	  (setup_sinks), (playbin_set_subtitles_visible):
	  Make switching off of subtitles work. To avoid all kind of
	  problems with unlinking of the subtitle input, we just keep
	  the subtitle inputs linked as they are and tell textoverlay
	  not to render them. Fixes #373011.
	  Other subtitle switching issues (esp. when there are both
	  external and in-stream subtitles) remain. They'll be solved
	  in playbin2.

2007-12-18  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/playback/gststreamselector.c: (gst_selector_pad_init):
	Init the pad segment too.

2007-12-18  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst-libs/gst/audio/gstaudiosink.c: (audioringbuffer_thread_func),
	(gst_audioringbuffer_open_device),
	(gst_audioringbuffer_close_device), (gst_audioringbuffer_acquire),
	(gst_audioringbuffer_release), (gst_audioringbuffer_start),
	(gst_audioringbuffer_pause), (gst_audioringbuffer_stop),
	(gst_audio_sink_create_ringbuffer):
	Improve debug output.

	* gst-libs/gst/audio/gstringbuffer.c: (gst_ring_buffer_start),
	(gst_ring_buffer_pause), (gst_ring_buffer_delay):
	Prevent some functions from doing things and failing when the
	ringbuffer is not yet acquired.

2007-12-18  Sebastian Dröge  <slomo@circular-chaos.org>

	* gst-libs/gst/interfaces/interfaces.h: